--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/inventorydemo?useSSL=false
 spring.datasource.username=inventorydemouser
 spring.datasource.password=1233
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.type-aliases-package=com.knx.inventorydemo.entity
 
 # mybatis.config-location=mybatis-config.xml
 # mybatis.mapper-locations=com/knx/inventorydemo/mapper
