--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.password=1233
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.type-aliases-package=com.knx.inventorydemo.entity
-mybatis.
+
+spring.devtools.livereload.enabled=true
 
 # mybatis.config-location=mybatis-config.xml
 # mybatis.mapper-locations=com/knx/inventorydemo/mapper
